--- a/styles/intro.css
+++ b/styles/intro.css
@@ -1,6 +1,17 @@
+@keyframes wave-animation {
+    0% { transform: rotate(0.0deg) scale(1); }
+    10% { transform: rotate(14.0deg); }
+    20% { transform: rotate(-8.0deg); }
+    30% { transform: rotate(14.0deg); }
+    40% { transform: rotate(-4.0deg); }
+    50% { transform: rotate(10.0deg) scale(1.1); }
+    60% { transform: rotate(0.0deg); }
+    100% { transform: rotate(0.0deg) scale(1); }
+}
+
 .intro-header {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 1rem;
 }
 
@@ -16,28 +27,62 @@
     margin: 0;
 }
 
-.intro-details .status {
-    font-size: 0.8rem;
-    display: flex;
-    align-items: center;
-    gap: 0.4rem;
-    color: var(--color-text-secondary);
-    margin-top: 0.25rem;
+.intro-details h2 {
+    font-weight: 300;
+    font-size: 1.25rem;
+    margin: 0;
 }
 
-.status .status-dot {
+.wave-emoji {
+    display: inline-block;
+    cursor: pointer;
+    transform-origin: bottom right;
+    font-size: 1.25rem;
+}
+.wave-emoji:hover {
+    animation: wave-animation 2s ease-in-out;
+}
+
+.status-link {
+    text-decoration: none;
+    color: var(--color-text-secondary);
+    margin-top: 0.5rem;
+    display: inline-block;
+    font-size: 0.75rem;
+}
+
+.status-text-container {
+    height: 28px;
+    overflow: hidden;
+}
+
+.status-text-container > div {
+    display: flex;
+    text-decoration: dashed underline;
+    align-items: center;
+    gap: 0.5rem;
+    height: 100%;
+    transition: transform 0.8s cubic-bezier(0.76, 0, 0.24, 1), color 0.4s;
+}
+
+.status-link:hover .status-text-container > div {
+    transform: translateY(-100%);
+}
+
+.status-link:hover {
+    color: var(--color-primary);
+}
+
+.status-dot {
     width: 8px;
     height: 8px;
     background-color: var(--color-status-available);
     border-radius: 50%;
 }
 
-.bio {
-    color: var(--color-text-secondary);
-    line-height: 1.6;
-    font-size: 0.9rem;
-    margin-top: 1.5rem;
-    margin-bottom: 0;
+.status-link:hover .hover-text .material-icons-outlined {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .profile-container {
@@ -45,7 +90,7 @@
     flex-shrink: 0;
     width: 80px;
     height: 80px;
-    border-radius: 50%;
+    border-radius: 20%;
     overflow: hidden;
     cursor: pointer;
     border: 2px solid var(--color-border);
@@ -67,9 +112,9 @@
 }
 
 .glasses {
-    width: 30%;
-    top: 22%;
-    left: 41%;
+    width: 48%;
+    top: 30%;
+    left: 35%;
     transform: rotate(var(--glasses-tilt));
 }
 
