--- a/styles/experience.css
+++ b/styles/experience.css
@@ -3,7 +3,6 @@
 }
 .tab-controls {
     display: flex;
-    width: 100%;
     background-color: var(--color-card);
     border: 1px solid var(--color-border);
     border-radius: 12px;
@@ -13,9 +12,9 @@
 .tab-button {
     flex-grow: 1;
     width: 50%;
-    padding: 0.5rem 0.5rem;
+    padding: 10px;
     font-family: 'Inter', sans-serif;
-    font-size: 0.75rem;
+    font-size: 12px;
     font-weight: 500;
     border-radius: 8px;
     cursor: pointer;
@@ -30,12 +29,11 @@
 }
 
 .experience-section {
-    display: flex;
     margin-top: 10px;
     background-color: var(--color-card);
     border: 1px solid var(--color-border);
     border-radius: 12px;
-    padding: 1rem;
+    padding: 16px;
 }
 
 .content-panel {
@@ -53,11 +51,11 @@
 .experience-entry {
     display: flex;
     align-items: flex-start;
-    gap: 0.75rem;
-    margin-bottom: 0.75rem;
+    gap: 10px;
+    margin-bottom: 10px;
 }
 .experience-entry:last-child {
-    margin-bottom: 0rem;
+    margin-bottom: 0px;
 }
 
 .entry-logo {
@@ -73,26 +71,26 @@
 }
 
 .entry-date {
-    font-size: 0.75rem;
+    font-size: 12px;
     color: var(--color-text-secondary);
-    margin: 0 0 0.25rem 0;
+    margin: 0 0 4px 0;
 }
 .entry-title {
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 500;
-    margin: 0;
+    margin: 0px;
     color: var(--color-text);
 }
 .entry-subtitle {
-    font-size: 0.75rem;
+    font-size: 14px;
     font-weight: 500;
     color: var(--color-text-secondary);
-    margin: 0.25rem 0rem 0.25rem 0rem;
+    margin: 4px 0px 4px 0px;
 }
 .entry-details {
-    padding-left: 1rem;
-    margin: 0rem;
-    font-size: 0.75rem;
+    padding-left: 20px;
+    margin: 0px;
+    font-size: 14px;
     color: var(--color-text-secondary);
 }
 .entry-details li::marker {
@@ -102,14 +100,14 @@
 .entry-tags {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.5rem;
-    margin-top: 1rem;
+    gap: 10px;
+    margin-top: 10px;
 }
 
 .tag-pill {
     display: inline-block;
-    padding: 0.3rem 0.6rem;
-    font-size: 0.75rem;
+    padding: 8px 8px;
+    font-size: 12px;
     color: var(--color-text-secondary);
     border: 1px solid var(--color-border);
     border-radius: 4px;
