--- a/styles/intro.css
+++ b/styles/intro.css
@@ -12,7 +12,7 @@
 .intro-header {
     display: flex;
     align-items: flex-start;
-    gap: 1rem;
+    gap: 14px;
 }
 
 .intro-details {
@@ -23,13 +23,13 @@
 
 .intro-details h1 {
     font-weight: 500;
-    font-size: 1.25rem;
+    font-size: 20px;
     margin: 0;
 }
 
 .intro-details h2 {
     font-weight: 300;
-    font-size: 1.25rem;
+    font-size: 20px;
     margin: 0;
 }
 
@@ -37,7 +37,7 @@
     display: inline-block;
     cursor: pointer;
     transform-origin: bottom right;
-    font-size: 1.25rem;
+    font-size: 20px;
 }
 .wave-emoji:hover {
     animation: wave-animation 2s ease-in-out;
@@ -46,9 +46,9 @@
 .status-link {
     text-decoration: none;
     color: var(--color-text-secondary);
-    margin-top: 0.5rem;
+    margin-top: 10px;
     display: inline-block;
-    font-size: 0.75rem;
+    font-size: 14px;
 }
 
 .status-text-container {
@@ -60,7 +60,7 @@
     display: flex;
     text-decoration: dashed underline;
     align-items: center;
-    gap: 0.5rem;
+    gap: 10px;
     height: 100%;
     transition: transform 0.8s cubic-bezier(0.76, 0, 0.24, 1), color 0.4s;
 }
