--- a/styles/skills.css
+++ b/styles/skills.css
@@ -6,18 +6,17 @@
     display: block;
     width: fit-content; 
     margin: 0px 0px 12px;
-    padding: 0.3rem 0.3rem;
+    padding: 4px 4px;
     border-radius: 4px;
 
     background-color: var(--color-heading);
     border: 1px solid var(--color-border);
 
     text-align: left;
-    font-size: 0.75rem;
+    font-size: 14px;
     color: var(--color-text-secondary);
     text-transform: lowercase;
     letter-spacing: 1px;
-
 }
 
 .skills-container {
@@ -29,7 +28,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
-    gap: 0.5rem;
+    gap: 10px;
 }
 
 .macos-window-card {
@@ -37,10 +36,10 @@
     border: 1px solid var(--color-border);
     text-transform: lowercase;
     border-radius: 12px;
-    padding: 0.75rem 0.75rem;
+    padding: 10px 10px;
     display: flex;
     align-items: center;
-    gap: 0.25rem;
+    gap: 4px;
     transition: all 0.25s cubic-bezier(0.65, 0, 0.35, 1);
     will-change: transform, opacity, max-width, padding, margin;
 }
@@ -52,7 +51,7 @@
     padding-left: 0;
     padding-right: 0;
     margin-left: 0;
-    margin-right: -0.6rem;
+    margin-right: -12px;
     overflow: hidden;
 }
 
@@ -80,8 +79,7 @@
 }
 
 .close-icon {
-    font-size: 10px;
-    font-weight: 700;
+    font-size: 12px;
     color: #9c150b;
     opacity: 0;
     transform: scale(1);
@@ -102,9 +100,9 @@
 
     background-color: var(--color-text);
     color: var(--color-background);
-    padding: 0.3rem 0.6rem;
-    border-radius: 20px;
-    font-size: 0.5rem;
+    padding: 8px 8px;
+    border-radius: 10px;
+    font-size: 12px;
     white-space: nowrap;
     opacity: 0;
     pointer-events: none;
@@ -132,7 +130,7 @@
 }
 
 .tech-name {
-    font-size: 0.75rem;
+    font-size: 14px;
     color: var(--color-text-secondary);
     white-space: nowrap;
 }
