--- a/styles/intro.css
+++ b/styles/intro.css
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 20px;
+    gap: 1rem;
 }
 
 .intro-text-content {
@@ -21,7 +21,7 @@
 }
 
 .intro-heading {
-    font-size: 35px;
+    font-size: 2rem;
     font-weight: 700;
     margin: 0 0 16px 0;
     line-height: 1.2;
@@ -38,13 +38,13 @@
 }
 
 .intro-subtitle {
-    font-size: 16px;
+    font-size: 1.1rem;
     margin: 0 0 16px 0;
     color: var(--color-text);
 }
 
 .intro-bio {
-    font-size: 16px;
+    font-size: 1rem;
     color: var(--color-text-secondary);
     line-height: 1.6;
     margin: 0 0 24px 0;
