--- a/styles/intro.css
+++ b/styles/intro.css
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    gap: 1rem;
+    gap: 20px;
 }
 
 .intro-text-content {
@@ -21,7 +21,7 @@
 }
 
 .intro-heading {
-    font-size: 2rem;
+    font-size: 35px;
     font-weight: 700;
     margin: 0 0 16px 0;
     line-height: 1.2;
@@ -38,13 +38,13 @@
 }
 
 .intro-subtitle {
-    font-size: 1.1rem;
+    font-size: 16px;
     margin: 0 0 16px 0;
     color: var(--color-text);
 }
 
 .intro-bio {
-    font-size: 1rem;
+    font-size: 16px;
     color: var(--color-text-secondary);
     line-height: 1.6;
     margin: 0 0 24px 0;
@@ -128,4 +128,28 @@
 }
 .profile-container:hover .hover-image {
     opacity: 1;
+}
+
+@media (max-width: 768px) {
+    .intro-section {
+        flex-direction: column-reverse;
+        align-items: left; 
+        gap: 20px;
+    }
+
+    .intro-text-content {
+  
+        flex-basis: 100%;
+        text-align: left; 
+    }
+
+    .intro-links {
+        justify-content: left;
+    }
+
+    .intro-image-container {
+        flex-basis: 100%;
+        width: 30%;
+        max-width: 280px;
+    }
 }
